--- a/demo/output.html
+++ b/demo/output.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="en-US" charset="UTF-8">
 
-<head>
-    <header>
-        <title>Title of the document</title>
+<head><title>Title of the document</title>
+    
+</head><body><header>
+        <h1>Title of the document</h1>
         <nav> <a href="#one">One</a> <a href="#two">Two</a> <a href="#three">Three</a> <a href="#four">Four</a> <a href="#five">Five</a> </nav>
     </header>
-</head>
-
-<body>
     <h1>Title in the document content</h1>
     <p>Hello world! This is PLUSHTML Boilerplate.</p>
-</body>
-
-<foot>
-    <footer>
+<footer>
         <h6>Title of the document foot</h6>
         <nav> <a href="#six">Six</a> <a href="#seven">Seven</a> <a href="#eight">Eight</a> <a href="#nine">Nine</a> </nav>
     </footer>
-</foot>
+    
+</body>
 
 </html>
